# poke-shiny-for-python

./: .gitignore  README.md  main.py  pyproject.toml
my_app/: more_interesting_example.py
