[tool.poetry]
name = "poke-shiny-for-python"
version = "0.1.0"
description = ""
authors = ["bdewhirst <b.dewhirst@gmail.com>"]
readme = "README.md"
packages = [{include = "poke_shiny_for_python"}]

[tool.poetry.dependencies]
python = "^3.10"
shiny = "^0.2.6"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
